--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "url": "git+https://github.com/eldh/bs-react.git"
   },
   "devDependencies": {
-    "bs-platform": "^4.0.7"
+    "bs-platform": "^4.0.7",
+    "react": "16.7.0-alpha.2",
+    "react-dom": "16.7.0-alpha.2"
   },
-  "dependencies": {
-    "react": "16.7.0-alpha.0",
-    "react-dom": "16.7.0-alpha.0"
-  }
+  "dependencies": {}
 }
