--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "bsb -make-world",
     "start": "bsb -make-world -w",
     "clean": "bsb -clean-world",
+    "docs": "./scripts/mk-docs.sh BsReact ./lib/bs/src ./src \"*.cmti\"",
     "test": "exit 0"
   },
   "keywords": [
